--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Agency - Start Bootstrap Theme</title>
+    <title>UI-arrC</title>
 
     <link href="css/typed.css" rel="stylesheet">
     <!-- Bootstrap Core CSS -->
@@ -95,6 +95,18 @@
                     <a href="" class="ar_i_tag">#socket.io</a>
                     <a href="" class="ar_i_tag">#python</a>
                     <a href="" class="ar_i_tag">#rest api</a>
+                </div>
+                <div class="ar_social_wrapper">
+                    <div class="ar_i_avatar_wrapper">
+                        <img src="/img/arrc.jpg" alt="arrC aka Naveen Kumar's profile image.">
+                    </div>
+                    <div class="ar_i_links">
+                        <span class="ar_i_icon ar_i_twitter"><a href="http://twitter.com/arrcoder"><i class="fa fa-twitter"></i></a></span>
+                        
+                        <span class="ar_i_icon ar_i_github"><a href="http://github.com/arrc"><i class="fa fa-github"></i></a></span>
+                        
+                        <span class="ar_i_icon ar_i_github"><a href="http://in.linkedin.com/arrcoder"><i class="fa fa-linkedin"></i></a></span>
+                    </div>
                 </div>
             </div>
         </div>
