--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </div>
                 <div class="ar_social_wrapper">
                     <div class="ar_i_avatar_wrapper">
-                        <img src="/img/arrc.jpg" alt="arrC aka Naveen Kumar's profile image.">
+                        <img src="/img/map-image.png" alt="arrC aka Naveen Kumar's profile image.">
                     </div>
                     <div class="ar_i_links">
                         <span class="ar_i_icon ar_i_twitter"><a href="http://twitter.com/arrcoder"><i class="fa fa-twitter"></i></a></span>
@@ -117,35 +117,42 @@
     <!-- 2: Bio section -->
     
 <!--====================================================================================-->
-    <section id="ar_bio">
+    <section id="ar_bio_section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Bio</h2>
-                    <h3 class="section-subheading text-muted">
+                    <h2 class="section-heading ar_heading">Bio</h2>
+                    <h3 class="section-subheading text-muted ar_subheading">
                         I'm a self-taught software developer cum designer. 
                     </h3>
-                    <hr>
-                    <h3>I know</h3>
-                    <p>Rails, iOS, Swift, JS, Android, Express, Python, Linux, </p>
-                    <hr>
-                    <h3>I wanna know</h3>
-                    <p>React, TDD/BDD (rspec, mocha), Go, Docker, Ansible, designing private cloud,advanced software design patterns, data mining (pandas), neutron GUI framework</p>
-<!--
-                    <ul>
-                        <li>React</li>
-                        <li>TDD / BDD</li>
-                        <li>Docker</li>
-                        <li>Ansible</li>
-                        <li>Setup private cloud</li>
-                        <li>Implementing advanced software design patterns</li>
-                        <li>Data mining &amp; related tools like pandas</li>
-                        <li>Graph database (neo4j)</li>
-                    </ul>
--->
-                    <hr>
-                    <h3>I wish I knew</h3>
-                    <p>functional programming (haskell, smalltalk), Machine learning &amp; A.I stuff, </p>
+                    <div class="ar_bio_wrapper">
+                        <div class="av_i_wrapper">
+                            <h3>I know</h3>
+                            <p>Rails, iOS, Swift, JS, Android, Express, Python, Linux, </p>
+                        </div>
+                        <hr>
+                        <div class="av_i_wrapper">
+                            <h3>I wanna know</h3>
+                            <p>React, TDD/BDD (rspec, mocha), Go, Docker, Ansible, designing private cloud,advanced software design patterns, data mining (pandas), neutron GUI framework</p>
+                        </div>
+                        <!--
+                        <ul>
+                            <li>React</li>
+                            <li>TDD / BDD</li>
+                            <li>Docker</li>
+                            <li>Ansible</li>
+                            <li>Setup private cloud</li>
+                            <li>Implementing advanced software design patterns</li>
+                            <li>Data mining &amp; related tools like pandas</li>
+                            <li>Graph database (neo4j)</li>
+                        </ul>
+                        -->
+                        <hr>
+                        <div class="av_i_wrapper">
+                            <h3>I wish I knew</h3>
+                            <p>functional programming (haskell, smalltalk), Machine learning &amp; A.I stuff, </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
