finished ican section.

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading ar_heading">Bio</h2>
+                    <h2 class="section-heading">Bio</h2>
                     <h3 class="section-subheading text-muted ar_subheading">
                         I'm a self-taught software developer cum designer. 
                     </h3>
@@ -163,35 +163,34 @@
     <!-- 3: I can section -->
     
 <!--====================================================================================-->
-    <section id="services">
+    <section id="services ar_ican_section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">I can</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Web apps and api's</h4>
-                    <p class="text-muted">I can make web applications using Rails, Sinatra, Express.js, MEAN stack, Flask.</p>
-                </div>
-                <div class="col-md-4">
+                <div class="col-md-4 ar_ican_unit">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
+                    <h4 class="service-heading">Web apps and API's</h4>
+                    <p class="text-muted">I can make web applications using Rails, Sinatra, Express.js, MEAN stack, Flask.</p>
+                </div>
+                <div class="col-md-4 ar_ican_unit">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-mobile fa-stack-1x fa-inverse"></i>
+                    </span>
                     <h4 class="service-heading">Mobile applications</h4>
                     <p class="text-muted">Native mobile application for iOS &amp; Android as well as hybrid applications using ionic framework.</p>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 ar_ican_unit">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-paint-brush fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Web designing</h4>
                     <p class="text-muted">I'm very fluent with sketchapp for making high fidelity mokups.</p>
@@ -220,7 +219,7 @@
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <i class="fa fa-eye fa-3x"></i>
                             </div>
                         </div>
                         <img src="img/portfolio/roundicons.png" class="img-responsive" alt="">
@@ -234,7 +233,7 @@
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <i class="fa fa-eye fa-3x"></i>
                             </div>
                         </div>
                         <img src="img/portfolio/startup-framework.png" class="img-responsive" alt="">
@@ -248,7 +247,7 @@
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <i class="fa fa-eye fa-3x"></i>
                             </div>
                         </div>
                         <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
@@ -262,7 +261,7 @@
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <i class="fa fa-eye fa-3x"></i>
                             </div>
                         </div>
                         <img src="img/portfolio/golden.png" class="img-responsive" alt="">
@@ -276,7 +275,7 @@
                     <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <i class="fa fa-eye fa-3x"></i>
                             </div>
                         </div>
                         <img src="img/portfolio/escape.png" class="img-responsive" alt="">
@@ -290,7 +289,7 @@
                     <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <i class="fa fa-eye fa-3x"></i>
                             </div>
                         </div>
                         <img src="img/portfolio/dreams.png" class="img-responsive" alt="">
