--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
 <!--====================================================================================-->
     <!-- Contact Section -->
     <section id="contact" class="ar_contact">
-        <div class="container">
+        <div class="container ar_contact_row">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact me</h2>
