--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="container">
+                <div class="container ar_model_container">
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
