modified index, changed type.js.

--- a/index.html
+++ b/index.html
@@ -134,24 +134,12 @@
                         <hr>
                         <div class="av_i_wrapper">
                             <h3>I wanna know</h3>
-                            <p>React, TDD/BDD (rspec, mocha), Reactive programming (RxSwift, RxJS) ,Go, Docker, Ansible, designing private cloud,advanced software design patterns, data mining (pandas), neutron GUI framework</p>
+                            <p><strong>React</strong>, <strong>TDD/BDD</strong> (rspec, mocha), Reactive programming (RxSwift, RxJS) ,Go, <strong>Docker</strong>, Ansible, <strong>Elixir</strong>,advanced software design patterns, data mining (pandas), neutron GUI framework</p>
                         </div>
-                        <!--
-                        <ul>
-                            <li>React</li>
-                            <li>TDD / BDD</li>
-                            <li>Docker</li>
-                            <li>Ansible</li>
-                            <li>Setup private cloud</li>
-                            <li>Implementing advanced software design patterns</li>
-                            <li>Data mining &amp; related tools like pandas</li>
-                            <li>Graph database (neo4j)</li>
-                        </ul>
-                        -->
                         <hr>
                         <div class="av_i_wrapper">
                             <h3>I wish I knew</h3>
-                            <p>functional programming (haskell, smalltalk), Machine learning &amp; A.I stuff, </p>
+                            <p>functional programming (haskell, lisp), Vim, Machine learning &amp; A.I stuff, </p>
                         </div>
                     </div>
                 </div>
@@ -164,11 +152,11 @@
     <!-- 3: I can section -->
     
 <!--====================================================================================-->
-    <section id="services ar_ican_section">
+    <section id="services">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">I make</h2>
+                    <h2 class="section-heading">I Do</h2>
                 </div>
             </div>
             <div class="row text-center">
@@ -178,7 +166,9 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Web apps and API's</h4>
-                    <p>I can make web applications using Rails, Sinatra, Express.js, MEAN stack, Flask.</p>
+                    <p>I've made web applications using Rails, Sinatra, Express.js, MEAN stack, Flask.</p>
+                    <p>I've comprehensive expreince in building RESTful API's in MEAN stack and Flask.</p>
+                    <p>I've worked with MongoDB, RealmDB, MariaDB, Redis &amp; Postgres. </p>
                 </div>
                 <div class="col-md-4 ar_ican_unit">
                     <span class="fa-stack fa-4x">
@@ -187,6 +177,7 @@
                     </span>
                     <h4 class="service-heading">Mobile applications</h4>
                     <p>Native mobile application for iOS &amp; Android as well as hybrid applications using ionic framework.</p>
+                    <p>I've worked with several popular libraries like Alamofire, SwiftyJSON, Volley etc.</p>
                 </div>
                 <div class="col-md-4 ar_ican_unit">
                     <span class="fa-stack fa-4x">
