--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Slabo+13px|Slabo+27px&subset=latin-ext" rel="stylesheet">
 
     <!-- Theme CSS -->
     <link href="css/agency.min.css" rel="stylesheet">
